--- a/SecureIM.ChatGUI/MainWindow.xaml
+++ b/SecureIM.ChatGUI/MainWindow.xaml
@@ -1,10 +1,12 @@
 ﻿<Window x:Class="SecureIM.ChatGUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:ct="clr-namespace:ChromeTabs;assembly=ChromeTabs"
         Title="MainWindow"
         Width="525"
         Height="350">
     <Grid>
+        
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="155*"/>
             <ColumnDefinition Width="362*"/>
