--- a/Demo/UserControls/UserControl1.xaml
+++ b/Demo/UserControls/UserControl1.xaml
@@ -3,6 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:viewModel="clr-namespace:Demo.ViewModel"
+             d:DataContext="{d:DesignInstance viewModel:TabClass1}"
              d:DesignHeight="300"
              d:DesignWidth="300"
              mc:Ignorable="d">
