--- a/Demo/MainWindow.xaml
+++ b/Demo/MainWindow.xaml
@@ -1,19 +1,20 @@
-﻿<Window x:Name="window"
-        x:Class="Demo.MainWindow"
+﻿<Window x:Class="Demo.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ChromeTabs Demo"
-        Height="600"
-        Width="700"
-        xmlns:local="clr-namespace:Demo"
-        xmlns:vm="clr-namespace:Demo.ViewModel"
-        xmlns:usercontrols="clr-namespace:Demo.UserControls"
+        xmlns:conv="clr-namespace:Demo.Converters"
         xmlns:ct="clr-namespace:ChromeTabs;assembly=ChromeTabs"
         xmlns:ctConv="clr-namespace:ChromeTabs.Converters;assembly=ChromeTabs"
-        xmlns:conv="clr-namespace:Demo.Converters"
+        xmlns:local="clr-namespace:Demo"
+        xmlns:usercontrols="clr-namespace:Demo.UserControls"
+        xmlns:vm="clr-namespace:Demo.ViewModel"
+        x:Name="window"
+        Title="ChromeTabs Demo"
+        Width="700"
+        Height="600"
         Background="WhiteSmoke"
-        DataContext="{Binding Source={StaticResource Locator},Path=ViewModelMainWindow}">
-    <!--These DataTemplates load the correct user control based on the viewmodel-->
+        DataContext="{Binding Source={StaticResource Locator},
+                              Path=ViewModelMainWindow}">
+    <!--  These DataTemplates load the correct user control based on the viewmodel  -->
     <Window.Resources>
         <conv:TabToTabSnapConverter x:Key="TabToTabSnapConverter" />
         <DataTemplate DataType="{x:Type vm:TabClass1}">
@@ -25,31 +26,36 @@
         <DataTemplate DataType="{x:Type vm:TabClass3}">
             <usercontrols:UserControl3 />
         </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:TabChatWindow}">
+            <usercontrols:ChatWindowControl />
+        </DataTemplate>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
-        <!--The tab control with with tab tearing support.-->
+        <!--  The tab control with with tab tearing support.  -->
         <ct:ChromeTabControl x:Name="MyChromeTabControl"
-                             MaximumTabWidth="200"
-                             TabPersistBehavior="All"
                              AddTabButtonBehavior="OpenNewTab"
+                             AddTabCommand="{Binding AddTabCommand}"
                              Background="AliceBlue"
-                             ItemsSource="{Binding ItemCollection}"
-                             SelectedItem="{Binding SelectedTab}"
-                             SelectedTabBrush="WhiteSmoke"
                              CanMoveTabs="{Binding CanMoveTabs}"
+                             CloseTabCommand="{Binding CloseTabCommand}"
+                             CloseTabWhenDraggedOutsideBonds="{Binding SelectedTab,
+                                                                       Converter={StaticResource TabToTabSnapConverter}}"
                              DragWindowWithOneTab="True"
                              IsAddButtonVisible="{Binding ShowAddButton}"
-                             CloseTabWhenDraggedOutsideBonds="{Binding SelectedTab, Converter={StaticResource TabToTabSnapConverter}}"
-                             AddTabCommand="{Binding AddTabCommand}"
-                             CloseTabCommand="{Binding CloseTabCommand}"
+                             ItemsSource="{Binding ItemCollection}"
+                             MaximumTabWidth="200"
                              ReorderTabsCommand="{Binding ReorderTabsCommand}"
-                             TabTearTriggerDistance="10"
-                             TabDraggedOutsideBonds="ChromeTabControl_TabDraggedOutsideBonds" SelectionChanged="MyChromeTabControl_SelectionChanged">
-            <!--We override the control template here to show how you can modify the properties of tab panel and content presenter-->
+                             SelectedItem="{Binding SelectedTab}"
+                             SelectedTabBrush="WhiteSmoke"
+                             SelectionChanged="MyChromeTabControl_SelectionChanged"
+                             TabDraggedOutsideBonds="ChromeTabControl_TabDraggedOutsideBonds"
+                             TabPersistBehavior="All"
+                             TabTearTriggerDistance="10">
+            <!--  We override the control template here to show how you can modify the properties of tab panel and content presenter  -->
             <ct:ChromeTabControl.Template>
                 <ControlTemplate TargetType="{x:Type ct:ChromeTabControl}">
                     <ControlTemplate.Resources>
@@ -61,106 +67,111 @@
                             <RowDefinition Height="30" />
                             <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
-                        <Border Background="{TemplateBinding Background}"
-                                BorderThickness="0,0,0,1"
+                        <Border Grid.Row="0"
+                                Background="{TemplateBinding Background}"
                                 BorderBrush="#FF999999"
-                                Grid.Row="0"
+                                BorderThickness="0,0,0,1"
                                 Padding="10,5,10,0">
-                            <ct:ChromeTabPanel IsItemsHost="True"
-                                               Background="{TemplateBinding Background}" />
+                            <ct:ChromeTabPanel Background="{TemplateBinding Background}" IsItemsHost="True" />
                         </Border>
 
-                        <Grid Grid.Row="1"
-                              Visibility="{TemplateBinding TabPersistBehavior,Converter={StaticResource TabPersistBehaviorToContentPresenterVisibilityConverter}}">
+                        <Grid Grid.Row="1" Visibility="{TemplateBinding TabPersistBehavior, Converter={StaticResource TabPersistBehaviorToContentPresenterVisibilityConverter}}">
                             <ContentPresenter Content="{TemplateBinding SelectedContent}" />
                         </Grid>
                         <Grid x:Name="PART_ItemsHolder"
                               Grid.Row="1"
-                              Visibility="{TemplateBinding TabPersistBehavior,Converter={StaticResource TabPersistBehaviorToItemHolderVisibilityConverter}}" />
+                              Visibility="{TemplateBinding TabPersistBehavior,
+                                                           Converter={StaticResource TabPersistBehaviorToItemHolderVisibilityConverter}}" />
                     </Grid>
                 </ControlTemplate>
             </ct:ChromeTabControl.Template>
-            <!--We must override the item template to show our tab name in the header. Here we use a simple
-            textblock, but you could put any combination of controls here. Uncomment the orange border to show
-            the bounds of the header content presenter-->
+            <!--
+                We must override the item template to show our tab name in the header. Here we use a simple
+                textblock, but you could put any combination of controls here. Uncomment the orange border to show
+                the bounds of the header content presenter
+            -->
             <ct:ChromeTabControl.ItemTemplate>
                 <DataTemplate>
                     <Grid Tag="{Binding RelativeSource={RelativeSource AncestorType={x:Type ct:ChromeTabItem}}}">
-
-                        <!--<Border BorderBrush="Orange"
-                                BorderThickness="1">-->
-                        <StackPanel Orientation="Horizontal"
-                                    Background="Transparent">
-                            <Image Source="{Binding TabIcon}"
-                                   Stretch="Fill"
-                                       Margin="5,5,5,5" />
-                            <TextBlock Text="{Binding TabName}"
-                                       TextWrapping="NoWrap"
-                                       TextTrimming="CharacterEllipsis"
-                                       VerticalAlignment="Center" />
-                        </StackPanel>
                         <!--</Border>-->
 
-                        <!--We can implement a context menu for the header here. The ChromeTabItems expose for convenience the following commands, "CloseTabCommand: close the current tab, "CloseAllTabsCommand", and "CloseOtherTabsCommand", which closes all tabs except the current.-->
+                        <!--  We can implement a context menu for the header here. The ChromeTabItems expose for convenience the following commands, "CloseTabCommand: close the current tab, "CloseAllTabsCommand", and "CloseOtherTabsCommand", which closes all tabs except the current.  -->
                         <Grid.ContextMenu>
                             <ContextMenu>
-                                <MenuItem Header="Close"
-                                          Command="{Binding Path=PlacementTarget.Tag.CloseTabCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
-                                          CommandTarget="{Binding Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" />
-                                <MenuItem Header="Close all"
-                                          Command="{Binding Path=PlacementTarget.Tag.CloseAllTabsCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
-                                          CommandTarget="{Binding Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" />
-                                <MenuItem Header="Close other tabs"
-                                          Command="{Binding Path=PlacementTarget.Tag.CloseOtherTabsCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
-                                          CommandTarget="{Binding Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}"
-                                          CommandParameter="{Binding}" />
+                                <MenuItem Command="{Binding Path=PlacementTarget.Tag.CloseTabCommand,
+                                                            RelativeSource={RelativeSource AncestorType=ContextMenu}}"
+                                          CommandTarget="{Binding Mode=OneWay,
+                                                                  RelativeSource={RelativeSource TemplatedParent}}"
+                                          Header="Close" />
+                                <MenuItem Command="{Binding Path=PlacementTarget.Tag.CloseAllTabsCommand,
+                                                            RelativeSource={RelativeSource AncestorType=ContextMenu}}"
+                                          CommandTarget="{Binding Mode=OneWay,
+                                                                  RelativeSource={RelativeSource TemplatedParent}}"
+                                          Header="Close all" />
+                                <MenuItem Command="{Binding Path=PlacementTarget.Tag.CloseOtherTabsCommand,
+                                                            RelativeSource={RelativeSource AncestorType=ContextMenu}}"
+                                          CommandParameter="{Binding}"
+                                          CommandTarget="{Binding Mode=OneWay,
+                                                                  RelativeSource={RelativeSource TemplatedParent}}"
+                                          Header="Close other tabs" />
 
                             </ContextMenu>
                         </Grid.ContextMenu>
+
+                        <!--<Border BorderBrush="Orange"
+                                BorderThickness="1">-->
+                        <StackPanel Background="Transparent" Orientation="Horizontal">
+                            <Image Margin="5,5,5,5"
+                                   Source="{Binding TabIcon}"
+                                   Stretch="Fill" />
+                            <TextBlock VerticalAlignment="Center"
+                                       Text="{Binding TabName}"
+                                       TextTrimming="CharacterEllipsis"
+                                       TextWrapping="NoWrap" />
+                        </StackPanel>
                     </Grid>
                 </DataTemplate>
             </ct:ChromeTabControl.ItemTemplate>
         </ct:ChromeTabControl>
         <StackPanel Grid.Row="1"
-                    Orientation="Horizontal"
+                    HorizontalAlignment="Right"
                     VerticalAlignment="Center"
-                    HorizontalAlignment="Right">
+                    Orientation="Horizontal">
             <Button x:Name="button"
-                    Content="Add Tab"
+                    Width="75"
                     Margin="5"
-                    Command="{Binding AddTabCommand}"
                     HorizontalAlignment="Left"
-                    Width="75" />
-            <CheckBox Content="Can add tabs"
-                      Margin="5"
-                      IsChecked="{Binding CanAddTabs,Mode=TwoWay}"
-                      VerticalAlignment="Center" />
-            <CheckBox Content="Show add button"
-                      Margin="5"
-                      IsChecked="{Binding ShowAddButton}"
-                      VerticalAlignment="Center" />
-            <CheckBox Content="Movable tabs"
-                      Margin="5"
-                      IsChecked="{Binding CanMoveTabs}"
-                      VerticalAlignment="Center" />
+                    Command="{Binding AddTabCommand}"
+                    Content="Add Tab" />
+            <CheckBox Margin="5"
+                      VerticalAlignment="Center"
+                      Content="Can add tabs"
+                      IsChecked="{Binding CanAddTabs,
+                                          Mode=TwoWay}" />
+            <CheckBox Margin="5"
+                      VerticalAlignment="Center"
+                      Content="Show add button"
+                      IsChecked="{Binding ShowAddButton}" />
+            <CheckBox Margin="5"
+                      VerticalAlignment="Center"
+                      Content="Movable tabs"
+                      IsChecked="{Binding CanMoveTabs}" />
         </StackPanel>
         <StackPanel Grid.Row="1"
-                    Orientation="Horizontal"
-                    HorizontalAlignment="Left">
+                    HorizontalAlignment="Left"
+                    Orientation="Horizontal">
             <Button x:Name="BnOpenPinnedTabExample"
-                    Content="Pinned tab example"
-                    HorizontalAlignment="Left"
-                    Margin="5"
-                    
                     Grid.Row="1"
-                    Click="BnOpenPinnedTabExample_Click" />
+                    Margin="5"
+                    HorizontalAlignment="Left"
+                    Click="BnOpenPinnedTabExample_Click"
+                    Content="Pinned tab example" />
             <Button x:Name="BnOpenCustomStyleExample"
-                    Content="Custom style example"
-                    HorizontalAlignment="Left"
-                    Margin="5"
-                   
                     Grid.Row="1"
-                    Click="BnOpenCustomStyleExample_Click" />
+                    Margin="5"
+                    HorizontalAlignment="Left"
+                    Click="BnOpenCustomStyleExample_Click"
+                    Content="Custom style example" />
         </StackPanel>
 
     </Grid>
