--- a/SecureIM.ChatGUI/App.xaml
+++ b/SecureIM.ChatGUI/App.xaml
@@ -1,12 +1,12 @@
-<Application x:Class="Demo.App"
+<Application x:Class="SecureIM.ChatGUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006"
              d1p1:Ignorable="d"
-             StartupUri="MainWindow.xaml">
+             StartupUri="view/MainWindow.xaml">
     <Application.Resources>
-        <vm:ViewModelLocator xmlns:vm="clr-namespace:Demo.ViewModel"
+        <vm:ViewModelLocator xmlns:vm="clr-namespace:SecureIM.ChatGUI.ViewModel"
                              x:Key="Locator"
                              d:IsDataSource="True" />
         <ResourceDictionary x:Key="RdDictionary" />
