--- a/SecureIM.ChatGUI/UserControls/ChatWindowControl.xaml
+++ b/SecureIM.ChatGUI/UserControls/ChatWindowControl.xaml
@@ -1,10 +1,11 @@
-﻿<UserControl x:Class="Demo.UserControls.ChatWindowControl"
+﻿<UserControl x:Class="SecureIM.ChatGUI.UserControls.ChatWindowControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:viewModel1="clr-namespace:Demo.ViewModel"
-             d:DataContext="{d:DesignInstance viewModel1:TabChatWindow}"
+             xmlns:viewModel1="clr-namespace:SecureIM.ChatGUI.ViewModel"
+             xmlns:tabClasses = "clr-namespace:SecureIM.ChatGUI.ViewModel.TabClasses"
+             d:DataContext="{d:DesignInstance tabClasses:TabChatWindow}"
              d:DesignHeight="300"
              d:DesignWidth="300"
              mc:Ignorable="d">
@@ -13,7 +14,20 @@
             <RowDefinition Height="35*" />
             <RowDefinition Height="35" />
         </Grid.RowDefinitions>
-        <TextBox Height="Auto" HorizontalAlignment="Stretch" Margin="6,6,6,6" Name="textBoxChatPane" VerticalAlignment="Stretch" Width="Auto" Grid.Row="0" />
-        <TextBox Height="23" HorizontalAlignment="Stretch" Margin="6,6,6,6" Name="textBoxEntryField" VerticalAlignment="Stretch" Width="Auto" Grid.Row="1" KeyDown="TextBoxEntryField_OnKeyDown" />
+        <TextBox Name="textBoxChatPane"
+                 Grid.Row="0"
+                 Width="Auto"
+                 Height="Auto"
+                 Margin="6,6,6,6"
+                 HorizontalAlignment="Stretch"
+                 VerticalAlignment="Stretch" />
+        <TextBox Name="textBoxEntryField"
+                 Grid.Row="1"
+                 Width="Auto"
+                 Height="23"
+                 Margin="6,6,6,6"
+                 HorizontalAlignment="Stretch"
+                 VerticalAlignment="Stretch"
+                 KeyDown="TextBoxEntryField_OnKeyDown" />
     </Grid>
 </UserControl>
