--- a/SecureIM.ChatGUI/UserControls/UserControl1.xaml
+++ b/SecureIM.ChatGUI/UserControls/UserControl1.xaml
@@ -1,10 +1,11 @@
-﻿<UserControl x:Class="Demo.UserControls.UserControl1"
+﻿<UserControl x:Class="SecureIM.ChatGUI.UserControls.UserControl1"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:viewModel="clr-namespace:Demo.ViewModel"
-             d:DataContext="{d:DesignInstance viewModel:TabClass1}"
+             xmlns:viewModel="clr-namespace:SecureIM.ChatGUI.ViewModel"
+             xmlns:tabClasses = "clr-namespace:SecureIM.ChatGUI.ViewModel.TabClasses"
+             d:DataContext="{d:DesignInstance tabClasses:TabClass1}"
              d:DesignHeight="300"
              d:DesignWidth="300"
              mc:Ignorable="d">
