--- a/SecureIM.ChatGUI/UserControls/UserControl2.xaml
+++ b/SecureIM.ChatGUI/UserControls/UserControl2.xaml
@@ -1,19 +1,18 @@
-﻿<UserControl x:Class="Demo.UserControls.UserControl2"
+﻿<UserControl x:Class="SecureIM.ChatGUI.UserControls.UserControl2"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             d:DesignHeight="300"
+             d:DesignWidth="300"
+             mc:Ignorable="d">
     <Grid>
         <StackPanel Margin="30,10">
-            <Label Content="{Binding TabName}"
-                   FontSize="18" />
-            <TextBlock Text="{Binding MyStringContent}"
-                       Margin="0,0,0,20" />
-            <ComboBox ItemsSource="{Binding MyNumberCollection}"
-                      SelectedItem="{Binding MySelectedNumber}"
-                      HorizontalAlignment="Left" />
+            <Label Content="{Binding TabName}" FontSize="18" />
+            <TextBlock Margin="0,0,0,20" Text="{Binding MyStringContent}" />
+            <ComboBox HorizontalAlignment="Left"
+                      ItemsSource="{Binding MyNumberCollection}"
+                      SelectedItem="{Binding MySelectedNumber}" />
         </StackPanel>
     </Grid>
 </UserControl>
