--- a/SecureIM.ChatGUI/UserControls/UserControl3.xaml
+++ b/SecureIM.ChatGUI/UserControls/UserControl3.xaml
@@ -1,25 +1,24 @@
-﻿<UserControl x:Class="Demo.UserControls.UserControl3"
+﻿<UserControl x:Class="SecureIM.ChatGUI.UserControls.UserControl3"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              d:DesignHeight="300"
-             d:DesignWidth="300">
+             d:DesignWidth="300"
+             mc:Ignorable="d">
     <Grid Margin="30,10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Label Content="{Binding TabName}"
-               FontSize="18" />
-        <TextBlock Text="{Binding MyStringContent}"
-                   Grid.Row="1"
+        <Label Content="{Binding TabName}" FontSize="18" />
+        <TextBlock Grid.Row="1"
                    Margin="0,0,0,20"
+                   Text="{Binding MyStringContent}"
                    TextWrapping="Wrap" />
-        <Image Source="{Binding MyImageUrl}"
-               Grid.Row="2"
+        <Image Grid.Row="2"
+               Source="{Binding MyImageUrl}"
                Stretch="Uniform" />
     </Grid>
 </UserControl>
