--- a/SecureIM.ChatGUI/UserControls/UserControl4.xaml
+++ b/SecureIM.ChatGUI/UserControls/UserControl4.xaml
@@ -1,12 +1,11 @@
-﻿<UserControl x:Class="Demo.UserControls.UserControl4"
+﻿<UserControl x:Class="SecureIM.ChatGUI.UserControls.UserControl4"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:Demo.UserControls"
-             mc:Ignorable="d"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              d:DesignHeight="300"
-             d:DesignWidth="300">
+             d:DesignWidth="300"
+             mc:Ignorable="d">
     <Grid Margin="30,10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -14,10 +13,10 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <!--<StackPanel Margin="30,10">-->
-        <Label Content="{Binding TabName}"
-               FontSize="18" />
+        <Label Content="{Binding TabName}" FontSize="18" />
         <CheckBox Grid.Row="1"
                   Content="Is blinking"
-                  IsChecked="{Binding IsBlinking,Mode=TwoWay}"/>
+                  IsChecked="{Binding IsBlinking,
+                                      Mode=TwoWay}" />
     </Grid>
 </UserControl>
