--- a/SecureIM.ChatGUI/view/DockingWindow.xaml
+++ b/SecureIM.ChatGUI/view/DockingWindow.xaml
@@ -1,26 +1,28 @@
-﻿<Window x:Class="Demo.DockingWindow"
+﻿<Window x:Class="SecureIM.ChatGUI.view.DockingWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ct="clr-namespace:ChromeTabs;assembly=ChromeTabs"
-        xmlns:local="clr-namespace:Demo"
-        xmlns:usercontrols="clr-namespace:Demo.UserControls"
-        xmlns:vm="clr-namespace:Demo.ViewModel"
+        xmlns:local="clr-namespace:SecureIM.ChatGUI"
+        xmlns:userControls="clr-namespace:SecureIM.ChatGUI.UserControls"
+        xmlns:viewModel="clr-namespace:SecureIM.ChatGUI.ViewModel"
+        xmlns:vm="clr-namespace:SecureIM.ChatGUI.ViewModel"
+        xmlns:tabClasses = "clr-namespace:SecureIM.ChatGUI.ViewModel.TabClasses"
         Title="DockingWindow"
         Width="400"
         Height="400"
         Loaded="Window_Loaded">
     <Window.Resources>
-        <DataTemplate DataType="{x:Type vm:TabClass1}">
-            <usercontrols:UserControl1 />
+        <DataTemplate DataType="{x:Type tabClasses:TabClass1}">
+            <userControls:UserControl1 />
         </DataTemplate>
-        <DataTemplate DataType="{x:Type vm:TabClass2}">
-            <usercontrols:UserControl2 />
+        <DataTemplate DataType="{x:Type tabClasses:TabClass2}">
+            <userControls:UserControl2 />
         </DataTemplate>
-        <DataTemplate DataType="{x:Type vm:TabClass3}">
-            <usercontrols:UserControl3 />
+        <DataTemplate DataType="{x:Type tabClasses:TabClass3}">
+            <userControls:UserControl3 />
         </DataTemplate>
-        <DataTemplate DataType="{x:Type vm:TabChatWindow}">
-            <usercontrols:ChatWindowControl />
+        <DataTemplate DataType="{x:Type tabClasses:TabChatWindow}">
+            <userControls:ChatWindowControl />
         </DataTemplate>
         <Storyboard x:Key="FadeInContentAnim">
             <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentControl" Storyboard.TargetProperty="Visibility">
