--- a/SecureIM.ChatGUI/view/MainWindow.xaml
+++ b/SecureIM.ChatGUI/view/MainWindow.xaml
@@ -1,14 +1,16 @@
-﻿<Window x:Class="Demo.MainWindow"
+﻿<Window x:Class="SecureIM.ChatGUI.view.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:conv="clr-namespace:Demo.Converters"
+        xmlns:converters="clr-namespace:SecureIM.ChatGUI.Converters"
         xmlns:ct="clr-namespace:ChromeTabs;assembly=ChromeTabs"
         xmlns:ctConv="clr-namespace:ChromeTabs.Converters;assembly=ChromeTabs"
-        xmlns:local="clr-namespace:Demo"
-        xmlns:usercontrols="clr-namespace:Demo.UserControls"
-        xmlns:vm="clr-namespace:Demo.ViewModel"
+        xmlns:local="clr-namespace:SecureIM.ChatGUI"
+        xmlns:userControls="clr-namespace:SecureIM.ChatGUI.UserControls"
+        xmlns:viewModel="clr-namespace:SecureIM.ChatGUI.ViewModel"
+        xmlns:vm="clr-namespace:SecureIM.ChatGUI.ViewModel"
+        xmlns:tabClasses = "clr-namespace:SecureIM.ChatGUI.ViewModel.TabClasses"
         x:Name="window"
-        Title="ChromeTabs Demo"
+        Title="ChromeTabs SecureIM.ChatGUI"
         Width="700"
         Height="600"
         Background="WhiteSmoke"
@@ -16,18 +18,18 @@
                               Path=ViewModelMainWindow}">
     <!--  These DataTemplates load the correct user control based on the viewmodel  -->
     <Window.Resources>
-        <conv:TabToTabSnapConverter x:Key="TabToTabSnapConverter" />
-        <DataTemplate DataType="{x:Type vm:TabClass1}">
-            <usercontrols:UserControl1 />
+        <converters:TabToTabSnapConverter x:Key="TabToTabSnapConverter" />
+        <DataTemplate DataType="{x:Type tabClasses:TabClass1}">
+            <userControls:UserControl1 />
         </DataTemplate>
-        <DataTemplate DataType="{x:Type vm:TabClass2}">
-            <usercontrols:UserControl2 />
+        <DataTemplate DataType="{x:Type tabClasses:TabClass2}">
+            <userControls:UserControl2 />
         </DataTemplate>
-        <DataTemplate DataType="{x:Type vm:TabClass3}">
-            <usercontrols:UserControl3 />
+        <DataTemplate DataType="{x:Type tabClasses:TabClass3}">
+            <userControls:UserControl3 />
         </DataTemplate>
-        <DataTemplate DataType="{x:Type vm:TabChatWindow}">
-            <usercontrols:ChatWindowControl />
+        <DataTemplate DataType="{x:Type tabClasses:TabChatWindow}">
+            <userControls:ChatWindowControl />
         </DataTemplate>
     </Window.Resources>
     <Grid>
