--- a/SecureIM.ChatGUI/UserControls/UserControl4.xaml
+++ b/SecureIM.ChatGUI/UserControls/UserControl4.xaml
@@ -3,10 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:tabClasses="clr-namespace:SecureIM.ChatGUI.ViewModel.TabClasses"
              d:DesignHeight="300"
              d:DesignWidth="300"
              mc:Ignorable="d">
-    <Grid Margin="30,10">
+    <Grid Margin="30,10" d:DataContext="{d:DesignInstance tabClasses:TabClass4}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
