--- a/SecureIM.ChatGUI/view/MainWindow.xaml
+++ b/SecureIM.ChatGUI/view/MainWindow.xaml
@@ -34,6 +34,9 @@
         <DataTemplate DataType="{x:Type tabClasses:TabChatWindow}">
             <userControls:ChatWindowControl />
         </DataTemplate>
+        <DataTemplate DataType="{x:Type tabClasses:TabChatMain}">
+            <userControls:ChatMainControl />
+        </DataTemplate>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
