Intital work on reader choosing window

--- a/SecureIM.ChatGUI/UserControls/ChatMainControl.xaml
+++ b/SecureIM.ChatGUI/UserControls/ChatMainControl.xaml
@@ -21,7 +21,7 @@
         <TextBox Name="TextBoxChatPane"
                  Grid.Row="0"
                  Width="Auto"
-                 Height="151"
+                 Height="76"
                  Margin="6,0,6,6"
                  HorizontalAlignment="Stretch"
                  VerticalAlignment="Bottom" Grid.ColumnSpan="2" />
@@ -34,15 +34,21 @@
                  VerticalAlignment="Stretch"
                  KeyDown="TextBoxEntryField_OnKeyDown" Grid.ColumnSpan="2" Grid.Column="0" />
         <Button x:Name="BtnGenKeyPair" Content="Generate Key Pair" HorizontalAlignment="Left" Margin="25,25,0,0" VerticalAlignment="Top" Width="156"
-                Grid.Row="0" Click="BtnGenKeyPair_Click" Height="35"/>
+                Grid.Row="0" Grid.Column="0" Click="BtnGenKeyPair_Click" Height="35"/>
         <Button x:Name="BtnGetPubKey" Content="Get Public Key" HorizontalAlignment="Left" Margin="25,100,0,0" VerticalAlignment="Top" Width="156"
-                Grid.Row="0" Click="BtnGetPubKey_Click" Height="35"/>
+                Grid.Row="0" Grid.Column="0" Click="BtnGetPubKey_Click" Height="35"/>
         <Button x:Name="BtnSetName" Content="Set Name" HorizontalAlignment="Left" Margin="25,175,0,0" VerticalAlignment="Top" Width="156"
-                Grid.Row="0" Click="BtnSetName_Click" Height="35"/>
-        <TextBox x:Name="TxtSetName" Grid.Row="0" HorizontalAlignment="Left" Height="33" Margin="236,175,0,0" TextWrapping="Wrap" Text="New Name..." VerticalAlignment="Top" Width="156" FontStyle="Italic" TextDecorations="{x:Null}" FontSize="10" Grid.ColumnSpan="2"/>
+                Grid.Row="0" Grid.Column="0" Click="BtnSetName_Click" Height="35"/>
+        <TextBox x:Name="TxtSetName" Grid.Row="0" HorizontalAlignment="Left" Height="33" Margin="235,175,0,0" TextWrapping="Wrap" Text="New Name..." VerticalAlignment="Top" Width="156" FontStyle="Italic" TextDecorations="{x:Null}" FontSize="10" Grid.ColumnSpan="2"
+                 Grid.Column="0" />
         <Button x:Name="BtnAddFriend" Content="Add Friend" HorizontalAlignment="Left" Margin="25,250,0,0" VerticalAlignment="Top" Width="156"
-                Grid.Row="0" Click="BtnAddFriend_Click" Height="35"/>
-        <TextBox x:Name="TxtAlias" Grid.Row="0" HorizontalAlignment="Left" Height="33" Margin="236,250,0,0" TextWrapping="Wrap" Text="Friend's Alias..." VerticalAlignment="Top" Width="156" FontStyle="Italic" TextDecorations="{x:Null}" FontSize="10" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="TxtFriendPublicKey" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left" Height="33" Margin="207,250,0,0" TextWrapping="Wrap" Text="Friend's Public Key..." VerticalAlignment="Top" Width="156" FontStyle="Italic" TextDecorations="{x:Null}" FontSize="10"/>
+                Grid.Row="0" Grid.Column="0" Click="BtnAddFriend_Click" Height="35"/>
+        <TextBox x:Name="TxtAlias" Grid.Row="0" HorizontalAlignment="Left" Height="33" Margin="235,250,0,0" TextWrapping="Wrap" Text="Friend's Alias..." VerticalAlignment="Top" Width="156" FontStyle="Italic" TextDecorations="{x:Null}" FontSize="10" Grid.ColumnSpan="2"
+                 Grid.Column="0" />
+        <TextBox x:Name="TxtFriendPublicKey" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left" Height="33" Margin="200,250,0,0" TextWrapping="Wrap" Text="Friend's Public Key..." VerticalAlignment="Top" Width="156" FontStyle="Italic" TextDecorations="{x:Null}" FontSize="10"/>
+        <Button x:Name="BtnStartChat" Content="Start New Chat" HorizontalAlignment="Left" Margin="25,325,0,0" VerticalAlignment="Top" Width="156"
+            Grid.Row="0" Grid.Column="0" Click="BtnAddFriend_Click" Height="34"/>
+        <TextBox x:Name="BtnStartChatFriendName" Grid.Row="0" HorizontalAlignment="Left" Height="33" Margin="235,325,0,0" TextWrapping="Wrap" Text=" Target Friend's Alias..." VerticalAlignment="Top" Width="156" FontStyle="Italic" TextDecorations="{x:Null}" FontSize="10" Grid.ColumnSpan="2"
+                 Grid.Column="0" />
     </Grid>
 </UserControl>
