--- a/SecureIM.ChatGUI/App.xaml
+++ b/SecureIM.ChatGUI/App.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006"
              d1p1:Ignorable="d"
-             StartupUri="view/MainWindow.xaml">
+             StartupUri="view/alternativeViews/PinnedTabExampleWindow.xaml">
     <Application.Resources>
         <vm:ViewModelLocator xmlns:vm="clr-namespace:SecureIM.ChatGUI.ViewModel"
                              x:Key="Locator"
