--- a/SecureIM.ChatGUI/UserControls/ChatMainControl.xaml
+++ b/SecureIM.ChatGUI/UserControls/ChatMainControl.xaml
@@ -8,63 +8,64 @@
              d:DataContext="{d:DesignInstance tabClasses:TabChatMain}"
              d:DesignHeight="500"
              d:DesignWidth="700"
-             mc:Ignorable="d">
-    <Grid>
+             mc:Ignorable="d" MinWidth="700" MinHeight="500">
+    <Grid MinWidth="700" MinHeight="500">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="37*" />
-            <ColumnDefinition Width="63*" />
+            <ColumnDefinition Width="40*" />
+            <ColumnDefinition Width="40*" />
+            <ColumnDefinition Width="40*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="35*" />
-            <RowDefinition Height="35" />
+            <RowDefinition Height="70*" />
+            <RowDefinition Height="70*"/>
+            <RowDefinition Height="70*"/>
+            <RowDefinition Height="70*"/>
+            <RowDefinition Height="70*"/>
+            <RowDefinition Height="100*"/>
+            <RowDefinition Height="50*" />
         </Grid.RowDefinitions>
         <TextBox Name="TxtChatPane"
-                 Grid.Row="0"
+                 Grid.Row="5"
                  Width="Auto"
-                 Height="76"
-                 Margin="6,0,6,6"
+                 Margin="10"
                  HorizontalAlignment="Stretch"
-                 VerticalAlignment="Bottom"
-                 Grid.ColumnSpan="2"
-                 Text="{Binding ChatHistory , Mode=TwoWay,UpdateSourceTrigger=Explicit}" IsReadOnly="True" TextWrapping="WrapWithOverflow" />
+                 Grid.ColumnSpan="3"
+                 Text="{Binding ChatHistory , Mode=TwoWay,UpdateSourceTrigger=Explicit}" IsReadOnly="True"
+                 TextWrapping="WrapWithOverflow" TextChanged="TxtChatPane_TextChanged"
+                 IsVisibleChanged="TxtChatPane_IsVisibleChanged" VerticalScrollBarVisibility="Auto"
+                 VerticalContentAlignment="Bottom" Padding="0,10,0,0" ScrollViewer.CanContentScroll="True" Height="87" />
         <TextBox Name="TxtEntryField"
-                 Grid.Row="1"
+                 Grid.Row="6"
                  Width="Auto"
-                 Height="23"
-                 Margin="6,6,6,6"
+                 Margin="10,0,10,10"
                  HorizontalAlignment="Stretch"
                  VerticalAlignment="Stretch"
                  Text="{Binding ChatEntry, Mode=TwoWay}"
-                 KeyDown="TextBoxEntryField_OnKeyDown" Grid.ColumnSpan="2" Grid.Column="0" />
-        <Button x:Name="BtnGenKeyPair" Content="Generate Key Pair" HorizontalAlignment="Left" Margin="25,25,0,0"
-                VerticalAlignment="Top" Width="156"
+                 KeyDown="TextBoxEntryField_OnKeyDown" Grid.ColumnSpan="3" Grid.Column="0" VerticalContentAlignment="Center" />
+        <Button x:Name="BtnGenKeyPair" Content="Generate Key Pair" Margin="25,20" Width="156"
                 Grid.Row="0" Grid.Column="0" Click="BtnGenKeyPair_Click" Height="35" />
-        <Button x:Name="BtnGetPubKey" Content="Get Public Key" HorizontalAlignment="Left" Margin="25,100,0,0"
-                VerticalAlignment="Top" Width="156"
-                Grid.Row="0" Grid.Column="0" Click="BtnGetPubKey_Click" Height="35" />
-        <Button x:Name="BtnSetName" Content="Set Name" HorizontalAlignment="Left" Margin="25,175,0,0"
-                VerticalAlignment="Top" Width="156"
-                Grid.Row="0" Grid.Column="0" Click="BtnSetName_Click" Height="35" />
-        <TextBox x:Name="TxtSetName" Grid.Row="0" HorizontalAlignment="Left" Height="33" Margin="235,175,0,0"
-                 TextWrapping="Wrap" Text="New Name..." VerticalAlignment="Top" Width="156" FontStyle="Italic"
-                 TextDecorations="{x:Null}" FontSize="10" Grid.ColumnSpan="2"
-                 Grid.Column="0" />
-        <Button x:Name="BtnAddFriend" Content="Add Friend" HorizontalAlignment="Left" Margin="25,250,0,0"
-                VerticalAlignment="Top" Width="156"
-                Grid.Row="0" Grid.Column="0" Click="BtnAddFriend_Click" Height="35" />
-        <TextBox x:Name="TxtAlias" Grid.Row="0" HorizontalAlignment="Left" Height="33" Margin="235,250,0,0"
-                 TextWrapping="Wrap" Text="Friend's Alias..." VerticalAlignment="Top" Width="156" FontStyle="Italic"
-                 TextDecorations="{x:Null}" FontSize="10" Grid.ColumnSpan="2"
-                 Grid.Column="0" />
-        <TextBox x:Name="TxtFriendPublicKey" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left" Height="33"
-                 Margin="200,250,0,0" TextWrapping="Wrap" Text="Friend's Public Key..." VerticalAlignment="Top"
+        <Button x:Name="BtnGetPubKey" Content="Get Public Key" Margin="25,20" Width="156"
+                Grid.Row="1" Grid.Column="0" Click="BtnGetPubKey_Click" Height="34" />
+        <Button x:Name="BtnSetName" Content="Set Name" Margin="25,20" Width="156"
+                Grid.Row="2" Grid.Column="0" Click="BtnSetName_Click" Height="35" />
+        <TextBox x:Name="TxtSetName" Grid.Row="2" Height="33" Margin="40,20"
+                 TextWrapping="Wrap" Text="New Name..." Width="156" FontStyle="Italic"
+                 TextDecorations="{x:Null}" FontSize="10"
+                 Grid.Column="1" />
+        <Button x:Name="BtnAddFriend" Content="Add Friend" Margin="25,20" Width="156"
+                Grid.Row="3" Grid.Column="0" Click="BtnAddFriend_Click" Height="36" />
+        <TextBox x:Name="TxtAlias" Grid.Row="3" Height="34" Margin="40,20"
+                 TextWrapping="Wrap" Text="Friend's Alias..." Width="156" FontStyle="Italic"
+                 TextDecorations="{x:Null}" FontSize="10"
+                 Grid.Column="1" />
+        <TextBox x:Name="TxtFriendPublicKey" Grid.Row="3" Grid.Column="2" Height="34"
+                 Margin="40,20" TextWrapping="Wrap" Text="Friend's Public Key..."
                  Width="156" FontStyle="Italic" TextDecorations="{x:Null}" FontSize="10" />
-        <Button x:Name="BtnStartChat" Content="Start New Chat" HorizontalAlignment="Left" Margin="25,325,0,0"
-                VerticalAlignment="Top" Width="156"
-                Grid.Row="0" Grid.Column="0" Click="BtnAddFriend_Click" Height="34" />
-        <TextBox x:Name="BtnStartChatFriendName" Grid.Row="0" HorizontalAlignment="Left" Height="33"
-                 Margin="235,325,0,0" TextWrapping="Wrap" Text=" Target Friend's Alias..." VerticalAlignment="Top"
-                 Width="156" FontStyle="Italic" TextDecorations="{x:Null}" FontSize="10" Grid.ColumnSpan="2"
-                 Grid.Column="0" />
+        <Button x:Name="BtnStartChat" Content="Start New Chat" Margin="25,20" Width="156"
+                Grid.Row="4" Grid.Column="0" Click="BtnAddFriend_Click" Height="34" />
+        <TextBox x:Name="BtnStartChatFriendName" Grid.Row="4" Height="33"
+                 Margin="40,20" TextWrapping="Wrap" Text=" Target Friend's Alias..."
+                 Width="156" FontStyle="Italic" TextDecorations="{x:Null}" FontSize="10"
+                 Grid.Column="1" />
     </Grid>
 </UserControl>
