--- a/SecureIM.ChatGUI/UserControls/ChatWindowControl.xaml
+++ b/SecureIM.ChatGUI/UserControls/ChatWindowControl.xaml
@@ -8,7 +8,14 @@
              d:DataContext="{d:DesignInstance tabClasses:TabChatWindow}"
              d:DesignHeight="500"
              d:DesignWidth="700"
-             mc:Ignorable="d" MinWidth="700" MinHeight="498">
+             mc:Ignorable="d"
+             MinWidth="700"
+             MinHeight="498">
+
+<!--    <UserControl.DataContext>-->
+<!--        <tabClasses:TabChatWindow />-->
+<!--    </UserControl.DataContext>-->
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="450*" />
@@ -21,7 +28,15 @@
                  Margin="10"
                  HorizontalAlignment="Stretch"
                  VerticalAlignment="Stretch"
-                 Text ="{Binding ChatHistory, Mode=TwoWay,UpdateSourceTrigger=Explicit}" TextWrapping="WrapWithOverflow" IsReadOnly="True" TextChanged="TxtChatPane_TextChanged" IsVisibleChanged="TxtChatPane_IsVisibleChanged" VerticalScrollBarVisibility="Auto" VerticalContentAlignment="Bottom" HorizontalContentAlignment="Stretch" Padding="0,10,0,0"/>
+                 Text="{Binding ChatHistory, Mode=TwoWay,UpdateSourceTrigger=Explicit}"
+                 TextWrapping="WrapWithOverflow"
+                 IsReadOnly="True"
+                 TextChanged="TxtChatPane_TextChanged"
+                 IsVisibleChanged="TxtChatPane_IsVisibleChanged"
+                 VerticalScrollBarVisibility="Auto"
+                 VerticalContentAlignment="Bottom"
+                 HorizontalContentAlignment="Stretch"
+                 Padding="0,10,0,0" />
         <TextBox Name="TxtEntryField"
                  Grid.Row="1"
                  Width="Auto"
@@ -30,6 +45,15 @@
                  HorizontalAlignment="Stretch"
                  VerticalAlignment="Stretch"
                  KeyDown="TextBoxEntryField_OnKeyDown"
-                 Text ="{Binding ChatEntry, Mode=TwoWay}" VerticalContentAlignment="Center" HorizontalContentAlignment="Stretch" ScrollViewer.CanContentScroll="True"/>
+                 Text="{Binding ChatEntry, Mode=TwoWay}"
+                 VerticalContentAlignment="Center"
+                 HorizontalContentAlignment="Stretch"
+                 ScrollViewer.CanContentScroll="True" />
+        <Label Name="LblTargetUser"
+               Content="{Binding TargetUser.Name, Mode=OneTime, UpdateSourceTrigger=Default}"
+               Grid.Column="0"
+               Grid.Row="0"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Center" />
     </Grid>
 </UserControl>
